--- a/src/App.css
+++ b/src/App.css
@@ -79,7 +79,7 @@ body {
     list-style-type: none;
 }
 
-.sidebarList-under{
+.sidebarList-under {
     padding: 0;
     list-style-type: none;
 }
@@ -89,7 +89,7 @@ body {
     font-size: 18px;
 }
 
-.sidebarListItem-under{
+.sidebarListItem-under {
     padding: 10px 20px 5px 50px;
     font-size: 15px;
 }
@@ -99,17 +99,20 @@ body {
     cursor: pointer;
 }
 
-.sidebarListItem-under:hover{
+.sidebarListItem-under:hover {
     cursor: pointer;
 }
+
 .sidebarListItem>a {
     text-decoration: none;
     color: #9e9ea4;
 }
-.sidebarListItem-under> a{
+
+.sidebarListItem-under>a {
     text-decoration: none;
     color: #9e9ea4;
 }
+
 .sidebarResponsive {
     display: inline !important;
     position: absolute;
@@ -186,3 +189,41 @@ body {
             'main';
     }
 }
+
+.loginTxt {
+    color: white;
+  
+}
+
+.loginDiv{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+
+}
+
+.loginInput{
+    padding: 10px;
+    width: 350px;
+    margin-bottom: 40px;
+}
+
+.submitBtn{
+    padding: 8px;
+    width: 150px;
+    background-color: #2e7d32;
+    border: 0;
+    color: black;
+    font-weight: 800;
+    cursor: pointer;
+    
+}
+ .submitBtn:hover{
+    border: 4px solid white;
+ }
+
+ .loginTxt{
+    font-size: 50px;
+ }
