--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,7 @@ body {
     margin-right: 5px;
 }
 
-.header {
+.header   {
     grid-area: header;
     height: 60px;
     display: flex;
@@ -200,7 +200,7 @@ body {
   
 }
 
-.loginDiv{
+.loginDiv {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -215,7 +215,7 @@ body {
     margin-bottom: 40px;
 }
 
-.submitBtn{
+.submitBtn , .giBtn{
     padding: 8px;
     width: 150px;
     background-color: #2e7d32;
@@ -232,3 +232,41 @@ body {
  .loginTxt{
     font-size: 50px;
  }
+
+ .invoiceInputs{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    height: 20vh;
+    align-items: center;
+    
+
+
+ }
+
+ input{
+    padding: 10px;
+    font-weight: 700;
+    font-size: 25px;
+ }
+
+ form {
+    width: 100%;
+ }
+
+ textarea{
+    font-weight: 700;
+    font-size: 25px;
+    margin-left: 100px;
+    
+ }
+
+ .giBtn{
+    margin-left: 500px;
+    margin-top: 50px;
+ }
+
+ .errorTxt{
+    color: #d50000;
+ }
+
