--- a/src/common/Style.css
+++ b/src/common/Style.css
@@ -1,67 +1,122 @@
  /* global inputs */
  .Global-input {
-     width: 20rem;
-     font-size: 1rem;
-     border-radius: 0.4rem;
-     border: none;
-     margin-left: 2rem;
+   width: 20rem;
+   font-size: 1rem;
+   border-radius: 0.4rem;
+   border: none;
+   margin-left: 2rem;
  }
 
 
  /* global select and option  */
  .Gloabal-select {
-     width: 18rem;
-     height: 2rem;
-     cursor: pointer;
+   width: 18rem;
+   height: 2rem;
+   cursor: pointer;
  }
 
  .Gloabal-option {
-     width: 18rem;
-     font-size: 1rem;
-     cursor: pointer;
+   width: 18rem;
+   font-size: 1rem;
+   cursor: pointer;
  }
 
 
  .radio-label {
-    display: flex;
-    align-items: center;
-    font-family: 'Arial', sans-serif;
-    cursor: pointer;
-    font-size: 16px;
-    user-select: none;
-    margin-bottom: 15px;
-  }
-  
-  /* Style the radio inputs */
-  .radio-label input {
-    opacity: 0;
-    position: absolute;
-  }
-  
-  /* Create a custom radio button appearance (checkmark) */
-  .checkmark {
-    position: relative;
-    height: 20px;
-    width: 20px;
-    background-color: #ddd;
-    border-radius: 50%;
-    margin-right: 10px;
-  }
-  
-  /* Style the checkmark when the radio button is checked */
-  .radio-label input:checked + .checkmark {
-    background-color: #2196F3;
-  }
-  
-  /* Hide the default browser appearance for radio buttons */
-  .radio-label input:checked + .checkmark:after {
-    content: '';
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 10px;
-    height: 10px;
-    background-color: #fff;
-    border-radius: 50%;
-  }
+   display: flex;
+   align-items: center;
+   font-family: 'Arial', sans-serif;
+   cursor: pointer;
+   font-size: 16px;
+   user-select: none;
+   margin-bottom: 15px;
+ }
+
+ /* Style the radio inputs */
+ .radio-label input {
+   opacity: 0;
+   position: absolute;
+ }
+
+ /* Create a custom radio button appearance (checkmark) */
+ .checkmark {
+   position: relative;
+   height: 20px;
+   width: 20px;
+   background-color: #ddd;
+   border-radius: 50%;
+   margin-right: 10px;
+ }
+
+ /* Style the checkmark when the radio button is checked */
+ .radio-label input:checked+.checkmark {
+   background-color: #2196F3;
+ }
+
+ /* Hide the default browser appearance for radio buttons */
+ .radio-label input:checked+.checkmark:after {
+   content: '';
+   position: absolute;
+   top: 50%;
+   left: 50%;
+   transform: translate(-50%, -50%);
+   width: 10px;
+   height: 10px;
+   background-color: #fff;
+   border-radius: 50%;
+ }
+
+ .checkbox-container {
+   display: block;
+   position: relative;
+   padding-left: 35px;
+   margin-bottom: 15px;
+   cursor: pointer;
+   font-size: 16px;
+ }
+
+ /* Hide the default checkbox */
+ .checkbox-container input {
+   position: absolute;
+   opacity: 0;
+   cursor: pointer;
+ }
+
+ /* Style for the custom checkbox */
+ .checkmark {
+   position: absolute;
+   top: 0;
+   left: 0;
+   height: 25px;
+   width: 25px;
+   background-color: #eee;
+   border: 1px solid #ccc;
+ }
+
+ /* Style for the checkmark when the checkbox is checked */
+ .checkbox-container input:checked+.checkmark {
+   background-color: #2196F3;
+ }
+
+ /* Style for the checkmark inside the checkbox */
+ .checkmark:after {
+   content: "";
+   position: absolute;
+   display: none;
+ }
+
+ /* Display the checkmark when the checkbox is checked */
+ .checkbox-container input:checked+.checkmark:after {
+   display: block;
+ }
+
+ /* Style for the checkmark icon */
+ .checkbox-container .checkmark:after {
+   left: 9px;
+   top: 5px;
+   width: 5px;
+   height: 10px;
+   border: solid white;
+   border-width: 0 3px 3px 0;
+   transform: rotate(45deg);
+ }
